--- a/Web.config
+++ b/Web.config
@@ -14,6 +14,9 @@
     <add name="DefaultConnection"
       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-ITLabProject-bfe15f4b-4134-4b4b-aa49-d1a5dd60791d;AttachDbFilename=|DataDirectory|\aspnet-ITLabProject-bfe15f4b-4134-4b4b-aa49-d1a5dd60791d.mdf;Integrated Security=SSPI"
       providerName="System.Data.SqlClient"/>
+  <add name="con1"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=NDS;Integrated Security=True"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
