theme done | some major changes done

--- a/Web.config
+++ b/Web.config
@@ -22,7 +22,7 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
-    <pages>
+    <pages theme="EmpPgTheme1">
       <namespaces>
         <add namespace="System.Web.Optimization"/>
         <add namespace="Microsoft.AspNet.Identity"/>
